[package]
name = "mc-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.13.0"
tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
tokio-stream = "0.1.9"
serde_yaml = "0.9"
async-trait = "0.1.60"
hyper = "0.14.23"
